--- a/www/views/Extjs3/themes/Group-Office/style.css
+++ b/www/views/Extjs3/themes/Group-Office/style.css
@@ -854,7 +854,7 @@ table.display-panel a:active
 	padding-top: 10px;
 }
 .collapsible-display-panel-header{
-	padding:2px;
+	padding:2px 0px 0px 0px;
 }
 
 .collapsible-display-panel-subheader {
